--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guia completo </title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    
 </head>
 <body>
     
-</body>
+    <header class="header">
+        <img id="logo-header" class="logo" src="logo.png">
+        <nav class="menu">
+         <a class="item-menu">Autores</a>
+         <a class="item-menu">Produto</a>
+         <a class="item-menu">Contato</a>        
+        </nav>
+    </header>
+    <main class="area-principal">
+        <div class="conteudo-principal">
+            <h1 class="titulo">GUIA COMPLETO DO DEV FRONT-END</h1>
+            <p class="paragrafo">Ebook gratuito</p>
+            <p class="paragrafo">Ebook gratuito.
+            <p class="paragrafo">As melhores dicas para você se tornar um desenvolvedor front-end de sucesso! </p>
+            <button class="botao">BAIXE AGORA!</button>    
+        </div>
+        <img class="imagem" src="imagem 1.png">
+    </main>
+        <footer class="rodape">
+            <p class="paragrafo-rodape">PRODUZIDO PELA FÁBRICA DE SOFTWARE - UNIPÊ</p>
+        </footer>
+    </body>
 </html>
